--- a/Tutorial Projeto InvestTools/Prototipos/CSU010 - Cadastro de Investidores - Busca.html
+++ b/Tutorial Projeto InvestTools/Prototipos/CSU010 - Cadastro de Investidores - Busca.html
@@ -45,8 +45,8 @@
                     <input type="text" id="filtro-usuario" name="filtro-usuario" class="form-control">
                 </div>
                 <div class="col-md-4 d-flex flex-wrap gap-2">
-                    <button type="button" id="btnPesquisar" class="btn btn-primary flex-shrink-0">Pesquisar</button>
-                    <button type="button" id="btnNovo" class="btn btn-success flex-shrink-0">Novo</button>
+                    <button type="button" id="btnPesquisar" class="btn btn-secondary flex-shrink-0">Pesquisar</button>
+                    <button type="button" id="btnNovo" class="btn btn-secondary flex-shrink-0">Novo</button>
                     <button type="reset" id="btnLimpar" class="btn btn-secondary flex-shrink-0">Limpar</button>
                 </div>
                 </form>
@@ -55,7 +55,7 @@
 
         <!-- Caixa da Tabela -->
         <div class="card col-12 col-lg-12">
-            <div class="card-header bg-secondary text-white">
+            <div class="card-header bg-primary text-white">
                 Lista de Investidores
             </div>
             <div class="card-body">
